address and tiktok

--- a/about.html
+++ b/about.html
@@ -102,9 +102,7 @@
     <a href="#" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
-    <a href="#" class="tik">
-      Visit Us<i class="fa-brands fa-tiktok"></i>
-    </a>
+    
     <a href="#" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
@@ -180,7 +178,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
     <div class="row">
     <div class="col-lg-2">
     <div class="header__logo">
-    <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 80px;"></a>
+    <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 90px;"></a>
     </div>
     </div>
     <div class="col-lg-10" style="padding-left: 100px;">
@@ -595,8 +593,8 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 <div class="footer__widget">
 <h5>VA Transportation HEALTHCARE</h5>
 <ul class="address">
-<li><span class="icon_pin"></span> 8802 sudley road MANASSAS VA 20110</li>
-<li><span class="icon_phone"></span> +1 571 450 1300</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
+<li><span class="icon_phone"></span>  +1 540-380-0024</li>
 <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">[email&#160;protected]</a></li>
 <li><p style="color: gainsboro;">DMV Certificate #601</p></li>
 </ul>
