--- a/applyjob.html
+++ b/applyjob.html
@@ -113,9 +113,7 @@
     <a href="#" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
-    <a href="#" class="tik">
-      Visit Us<i class="fa-brands fa-tiktok"></i>
-    </a>
+    
     <a href="#" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
@@ -146,8 +144,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </div>
 <div id="mobile-menu-wrap"></div>
 <ul class="offcanvas__widget">
-<li><span class="icon_phone"></span> +1 123 456 7890</li>
-<li><span class="icon_pin"></span> Fairfax, VA</li>
+<li><span class="icon_phone"></span>  +1 540-380-0024</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 
 <div class="offcanvas__social">
@@ -165,8 +163,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-9 offset-lg-3">
 <ul class="header__top__widget">
-<li><span class="icon_phone"></span> +1 123 456 7890</li>
-<li><span class="icon_pin"></span> Fairfax, VA</li>
+<li><span class="icon_phone"></span>  +1 540-380-0024</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
 <div class="header__top__right">
 
@@ -461,10 +459,10 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>VA Transportation HEALTHCARE</h5>
+<h5>Bright Star Non-Medical Transportation</h5>
 <ul class="address">
-<li><span class="icon_pin"></span> 8802 sudley road MANASSAS VA 20110</li>
-<li><span class="icon_phone"></span> +1 571 450 1300</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
+<li><span class="icon_phone"></span>  +1 540-380-0024</li>
 <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">[email&#160;protected]</a></li>
 <li><p style="color: gainsboro;">DMV Certificate #601</p></li>
 </ul>
