--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
     <a href="#" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
-    <a href="#" class="tik">
-      Visit Us<i class="fa-brands fa-tiktok"></i>
-    </a>
+    
     <a href="#" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
@@ -284,7 +282,7 @@ have improved bottom lines across virtually every industry.</p>
 <img src="img/services/si-1.png" alt="">
 </div>
 <h5>Wheelchair Transport</h5>
-<p>Individuals who need direct assistance with transportation, are in wheelchairs, and have special requirements use wheelchair transportation. Although we do the grunt work, our clients can concentrate on what matters most to them!</p>
+<p>Wheelchair transportation caters to those requiring direct assistance, especially individuals in wheelchairs with unique needs.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -297,7 +295,7 @@ have improved bottom lines across virtually every industry.</p>
 <img src="img/services/si-2.png" alt="">
 </div>
 <h5>Strecher Transport</h5>
-<p>VA Transportation Healthcare has more than 10 years experience in non-emergency medical stretcher transportation services. We include premier medical transportation services that meet the highest industry standards.</p>
+<p>With over a decade of expertise, VA Transportation Healthcare specializes in non-emergency medical stretcher transportation services.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -310,7 +308,7 @@ have improved bottom lines across virtually every industry.</p>
 <img src="img/services/si-3.png" alt="">
 </div>
 <h5>Ambulatory Transport</h5>
-<p>Non emergency ambulatory transportation services play a vital role in ensuring efficient and reliable transportation for individuals requiring medical assistance.</p>
+<p>The significance of non-emergency ambulatory transportation services lies in providing dependable and effective transport for individuals in need of medical aid.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -323,7 +321,7 @@ have improved bottom lines across virtually every industry.</p>
 <img src="img/services/si-4.png" alt="">
 </div>
 <h5>Stair-Lifter Chair</h5>
-<p>Hands that are special Individuals who are bed ridden due to illness or accident can use Non-Emergency Medical Transportation’s bed to bed transportation service.</p>
+<p>Individuals who are bedridden due to illness or accidents can utilize Non-Emergency Medical Transportation's bed-to-bed service designed for their special needs.</p>
 <a href="#">Read More</a>
 </div>
 </div>
@@ -425,10 +423,10 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="chooseus__text">
 <div class="section-title">
 <span>Serving Northern VA, Maryland and DC</span>
-<h2>WHY USE OUR NON-EMERGENCY MEDICAL TRANSPORT SERVICE?</h2>
+<h2>WHY TO USE OUR NON-EMERGENCY MEDICAL TRANSPORT SERVICE?</h2>
 </div>
 <div class="row">
-<p style="color: #fff;">We provide professional, door-to-door non-emergency wheelchair, stretcher and other transport services to patients, elderly people and anyone who needs assisted transportation  throughout the tri-state area. Our specialized medical transportation responsibilities include but are not limited to: senior citizens, individuals who require the use of wheelchairs and parents and children with special needs. We provide transportation services for a variety of situations, including hospital transportation to home services. Our team can provide wheelchair-accessible vehicles for patients. Our services are for private citizens, hospitals, doctors, insurance companies/HMOs, nursing or private group homes, and assisted living facilities. We assist clients from the time of pick-up to drop-off and make sure that they get there safely and on-time. we understand the needs of our clients, especially in regards to geriatric wheelchair transportation services. We provide a full range of transportation services for elderly, individuals with disabilities, and those facing medical challenges.</p>
+<p style="color: #fff;">We offer professional door-to-door non-emergency transportation services, including wheelchair and stretcher options, catering to patients, seniors, and individuals in need of assisted transport across the tri-state region. Our specialized medical transport covers various cases such as seniors, wheelchair users, and families with special needs, ensuring safe and punctual travel, including hospital-to-home transfers. Our team provides accessible vehicles, serving private individuals, medical institutions, insurance entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client requirements, especially in geriatric wheelchair transport, we provide a complete range of transportation solutions for the elderly, disabled individuals, and those facing medical obstacles.</p>
 
 <!--<div class="col-lg-6 col-md-6 col-sm-6">
 <div class="chooseus__item">
@@ -580,40 +578,40 @@ your free listings for any luxury property you have.</p>
 <div class="testimonial__slider owl-carousel">
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“Thank you for taking care of my grandmother for transportation to her doctor’s clinic. Everything went very smoothly..”</p>
+<p>“I appreciate your assistance in transporting my grandmother to her doctor's appointment. The entire process went incredibly smoothly.”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
+<!--<img src="img/testimonial/ta-1.png" alt="">-->
 </div>
 <div class="testimonial__item__author__text">
-<h5>Andrew Jacobs</h5>
-<span>January 2021</span>
+<h5>Andrew</h5>
+<span>January 2023</span>
 </div>
 </div>
 </div>
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“I needed to get my mother’s checked up. She cannot walk. I needed custom built vehicle. You guys did a good job. Recommended.”</p>
+<p>“I required a medical check-up for my immobile mother, necessitating a custom-built vehicle. Your team performed admirably, and I wholeheartedly recommend your service.”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
+<!--<img src="img/testimonial/ta-1.png" alt="">-->
 </div>
 <div class="testimonial__item__author__text">
-<h5>Smitha Patel</h5>
-<span>June 2021</span>
+<h5>Smitha</h5>
+<span>June 2023</span>
 </div>
 </div>
 </div>
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“Very few people do their work with excellence and compassion. This company is a high value on these things. Highly recommend!”</p>
+<p>“Excellence and compassion are rare traits in service, but this company truly prioritizes them. I highly recommend their services, which hold these values in high regard.”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
+<!--<img src="img/testimonial/ta-1.png" alt="">-->
 </div>
 <div class="testimonial__item__author__text">
-<h5>Don Ward</h5>
-<span>July 2022</span>
+<h5>Ward</h5>
+<span>July 2023</span>
 </div>
 </div>
 </div>
@@ -771,10 +769,10 @@ ut labore et dolore magna aliqua.</p>-->
             <div class="col">
                 <h5>No better place to get you healthy again</h5>
                 <h2>VISIT US</h2>
-                <h6>Do you usually need a wheelchair to move around for getting medical help? We provided assisted transportation services for non emergency medical purposes. We are are your wheelchair transport specialists. 
-                    Our drivers are trained specifically in assisting clients that require the use of wheelchairs. Our drivers are experienced and understand the needs of wheelchair users and provide personal assistance. 
-                    Whether you need help to the wheelchair, personal assistance, transporting medical documents to and from your doctor, our drivers are able to provide safe reliable <span style="color: #FF8F00;">non-emergency medical transportation</span> , and state-of-the-art wheelchair accessible vehicles 24/7.</h6>
-
+                <h6>Is a wheelchair essential for your medical travel? We offer support in non-emergency medical transportation, specializing in wheelchair transport. 
+                    Our skilled drivers are trained to assist wheelchair users effectively, providing personalized help. 
+                    Whether you require wheelchair assistance, personal support, or the transportation of medical documents to and from your doctor, our drivers offer dependable <span style="color: #FF8F00;">non-emergency medical transportation</span> , Our state-of-the-art wheelchair accessible vehicles are available 24/7 for safe and reliable service.</h6>
+                <br>
                 <h6 style="color: #FF8F00;">Virginia Service Areas: <a href="#">Dumfries</a> | <a href="#">Gainesville</a> | <a href="#">Falls Church</a> | <a href="#">Vienna</a> | <a href="#">Fairfax</a> | <a href="#">Chantilly</a> | <a href="#">Herndon</a> | <a href="#">Fredericksburg</a> |
                     <a href="#">Sterling</a> | <a href="#">Bristow</a> | <a href="#">Springfield</a> | <a href="#">Manassas</a> | <a href="#">Annandale</a> | <a href="#">Burke</a> | <a href="#">Ashburn</a> | <a href="#">McLean</a> | <a href="#">Leesburg</a> |
                     <a href="#">Woodbridge</a> | <a href="#">Reston</a> | <a href="#">Centreville</a> | <a href="#">Alexandria</a> | <a href="#">Stafford</a> | <a href="#">Arlington</a> | <a href="#">Lorton</a> | <a href="#">Reston</a> | <a href="#">Spotsylvania</a> | <a href="#">Mount Vernon</a></h6>
@@ -791,7 +789,7 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="row">
 <div class="col-lg-12">
 <div class="contact__map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd" height="460" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.7692763408355!2d-79.9746036846724!3d37.31529847985859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884d03e982db0c4d%3A0x8db744d73df2e32d!2s5312%20Peters%20Creek%20Rd%20Suite%20B%2C%20Roanoke%2C%20VA%2024019%2C%20USA!5e0!3m2!1sen!2sca!4v1629958913941!5m2!1sen!2sca" height="460" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 </div>
 </div>
@@ -853,10 +851,10 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>VA Transportation HEALTHCARE</h5>
+<h5>Bright Star Non-Medical Transportation/h5>
 <ul class="address">
-<li><span class="icon_pin"></span> 8802 sudley road MANASSAS VA 20110</li>
-<li><span class="icon_phone"></span> +1 571 450 1300</li>
+<li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">[email&#160;protected]</a></li>
 <li><p style="color: gainsboro;">DMV Certificate #601</p></li>
 </ul>
