index and about paraphrased

--- a/about.html
+++ b/about.html
@@ -184,8 +184,8 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
     <div class="col-lg-10" style="padding-left: 100px;">
     <nav class="header__menu mobile-menu">
     <ul>
-    <li class="active"><a href="./index.html">Home</a></li>
-    <li><a href="./about.html">About Us</a></li>
+    <li><a href="./index.html">Home</a></li>
+    <li class="active"><a href="./about.html">About Us</a></li>
     <li><a href="./services.html">Services</a>
     <ul class="dropdown">
     <li><a href="./about.html">Elderly Transportation</a></li>
@@ -272,7 +272,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </div>
 <div class="col-lg-5 offset-lg-2">
 <div class="about__company__title">
-<p>Started in 2022 as a family owned business, we provide professional, door-to-door non-emergency wheelchair transport which is available to the public throughout the tri-state area. Our specialized medical transportation responsibilities include but are not limited to: senior citizens, individuals who require the use of wheelchairs and parents and children with special needs. Our nemt services are for private citizens, hospitals, doctors, insurance companies/HMOs, nursing or private group homes, and assisted living facilities. We assist clients from the time of pick-up to drop-off and make sure that they get there safely and on-time.</p>
+<p>Established in 2022 as a family-owned venture, we offer expert non-emergency wheelchair transport services accessible to the public across the tri-state region. Our focused medical transport covers various cases including senior citizens, wheelchair-dependent individuals, and families with special needs. Our NEMT services cater to private individuals, medical institutions, insurance entities, nursing or private group homes, and assisted living facilities. Ensuring safety and punctuality, we support clients throughout the journey, from pickup to drop-off.</p>
 </div>
 </div>
 </div>
@@ -282,13 +282,13 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
   <p>Why?</p>
 <h2>Bright Star Non Medical Transportation</h2>
 <div class="about__company__title">
-<p>Our team endeavors to provide the very best nemt transportation service for all of our customer/ partners, including dependability, convenience, safety and value, while exhibiting servant leadership to all.
+<p>Our team is committed to delivering top-notch NEMT transportation services to our customers and partners, prioritizing dependability, convenience, safety, and value, while embodying servant leadership principles.
 
-VA Transportation Healthcare LLC was founded to bring reliable, quality nemt transportation services to those who are in need of assisted transportation,  VA Transportation Healthcare LLC is dedicated to serving our customers through professional transportation that fills the gap between personal and public transportation.
+VA Transportation Healthcare LLC was established with the aim of providing trustworthy and quality NEMT transportation services to individuals in need of assisted transportation. Our dedication lies in bridging the gap between personal and public transportation options.
 
-VA Transportation Healthcare LLC will provide the most dependable wheelchair transportation of the highest quality and value with direct focus on meeting the needs of our clients and will respond with promptness, sensitivity and always with the utmost integrity. At  VA Transportation Healthcare LLC, we strive to exceed your expectations.
+VA Transportation Healthcare LLC is dedicated to offering the most reliable and highest quality wheelchair transportation, with a direct focus on addressing our clients' needs promptly, sensitively, and with unwavering integrity. We at VA Transportation Healthcare LLC aim to surpass your expectations.
 
-All of our staff display photo ID badges, and in standard company uniforms. Our entire staff is screened and certified comfort and safety is our primary concern.</p>
+Our entire staff, identified by photo ID badges and dressed in company uniforms, adheres to strict screening and certification protocols. Your comfort and safety are our foremost priorities.</p>
 </div>
 </div>
 </div>
@@ -296,16 +296,16 @@ All of our staff display photo ID badges, and in standard company uniforms. Our 
   <p>Choose the best</p>
 <h2>Wheel Chair transportation</h2>
 <div class="about__company__title">
-<p>Our highly trained staff members are dedicated to respond with promptness, sensitivity and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes through back ground check and has completed extensive training in the handling of patients with special needs to insure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality.  VA Transportation Healthcare LLC is the leading wheelchair transport in Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p></div>
+<p>Our team of extensively trained staff is committed to swift responses with sensitivity and unwavering integrity. We exclusively recruit drivers who are professionally trained, compassionate, empathetic, and comprehend the challenges faced by individuals with limited mobility. Each driver undergoes a background check and comprehensive training to ensure safe and proper transfers for patients with special needs. Our staff also recognizes the importance of upholding patient confidentiality. As the premier wheelchair transport service in Washington DC, Virginia, and Maryland, contact us for further information or to arrange an appointment.</p></div>
 </div>
 </div>
 <div class="container">
   <h2>Our Refund Policy</h2><br>
   <ul>
     <li>
-      For wheelchair and ambulatory transportation services, customer must cancel 72 hours prior to service date for full refund
+      To receive a full refund for wheelchair and ambulatory transportation services, customers are required to cancel at least 72 hours before the scheduled service date.
     </li>
-    <li>For stretcher transportation services, customer must cancel 72 hours prior to service date to claim 50% refund.</li></ul>
+    <li>To be eligible for a 50% refund, customers requesting stretcher transportation services must cancel at least 72 hours before the scheduled service date.</li></ul>
   </div>
 <!--<div class="about__company__pic">
 <div class="row">
