some changes to testimonials

--- a/testimonials.html
+++ b/testimonials.html
@@ -103,9 +103,6 @@
     <a href="#" class="twi">
       Visit Us<i class="fa-brands fa-square-twitter"></i>
     </a>
-    <a href="#" class="tik">
-      Visit Us<i class="fa-brands fa-tiktok"></i>
-    </a>
     <a href="#" class="mail">
       Visit Us<i class="fa-sharp fa-solid fa-envelope"></i>
     </a>
@@ -315,17 +312,6 @@ your free listings for any luxury property you have.</p>
 </div>
 </section>-->
 <br>
-<!-- Box -->
-<div class="container-fluid" style="padding-left: 3%;padding-right: 3%;">
-<div class="container-box" style="border: 1px solid orangered;padding: 2%;">
-  <div class="information">
-    <p><span>LIMITED-TIME DISCOUNT OFFER</span>
-    BrightStar Non Medical Transportation Healthcare has reduced rates. Up to 30% off for limited time</p>
-    <a href="/discount.html" class="primary-btn"><span>See Rates</span></a>
-  </div>
-  
-</div>
-</div><br>
 
 <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
 <div class="container">
@@ -339,40 +325,40 @@ your free listings for any luxury property you have.</p>
 <div class="testimonial__slider owl-carousel">
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“Thank you for taking care of my grandmother for transportation to her doctor’s clinic. Everything went very smoothly..”</p>
+<p>“I appreciate your assistance in transporting my grandmother to her doctor's appointment. The entire process went incredibly smoothly.”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
+<!--<img src="img/testimonial/ta-1.png" alt="">-->
 </div>
 <div class="testimonial__item__author__text">
-<h5>Andrew Jacobs</h5>
-<span>January 2021</span>
+<h5>Andrew</h5>
+<span>January 2023</span>
 </div>
 </div>
 </div>
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“I needed to get my mother’s checked up. She cannot walk. I needed custom built vehicle. You guys did a good job. Recommended.”</p>
+<p>“I required a medical check-up for my immobile mother, necessitating a custom-built vehicle. Your team performed admirably, and I wholeheartedly recommend your service.”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
+<!--<img src="img/testimonial/ta-1.png" alt="">-->
 </div>
 <div class="testimonial__item__author__text">
-<h5>Smitha Patel</h5>
-<span>June 2021</span>
+<h5>Smitha</h5>
+<span>June 2023</span>
 </div>
 </div>
 </div>
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“Very few people do their work with excellence and compassion. This company is a high value on these things. Highly recommend!”</p>
+<p>“Excellence and compassion are rare traits in service, but this company truly prioritizes them. I highly recommend their services, which hold these values in high regard.”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
-<img src="img/testimonial/ta-1.png" alt="">
+<!--<img src="img/testimonial/ta-1.png" alt="">-->
 </div>
 <div class="testimonial__item__author__text">
-<h5>Don Ward</h5>
-<span>July 2022</span>
+<h5>Ward</h5>
+<span>July 2023</span>
 </div>
 </div>
 </div>
@@ -412,10 +398,11 @@ your free listings for any luxury property you have.</p>
 </div>-->
 </div>
 </div>
-</section>
+</section><br>
 
 
-<section class="latest spad">
+
+<!--<section class="latest spad">
 <div class="container">
 <div class="row">
 <div class="col-lg-12 text-center">
@@ -489,7 +476,7 @@ be a result</p>
 </div>
 </div>
 </div>
-</section>
+</section>-->
 
 <div class="container">
 <div class="counter__content" style="text-align: center;">
@@ -550,7 +537,7 @@ ut labore et dolore magna aliqua.</p>-->
 <div class="row">
 <div class="col-lg-12">
 <div class="contact__map">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd" height="460" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.7692763408355!2d-79.9746036846724!3d37.31529847985859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884d03e982db0c4d%3A0x8db744d73df2e32d!2s5312%20Peters%20Creek%20Rd%20Suite%20B%2C%20Roanoke%2C%20VA%2024019%2C%20USA!5e0!3m2!1sen!2sca!4v1629958913941!5m2!1sen!2sca" height="460" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 </div>
 </div>
