--- a/blog.html
+++ b/blog.html
@@ -181,7 +181,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-3">
 <div class="header__logo">
-<a href="./index.html"><img data-cfsrc="img/logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/logo.png" alt=""></noscript></a>
+<a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
 </div>
 </div>
 <div class="col-lg-7">
@@ -243,11 +243,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </ul>
 </nav>
 </div>
-<div class="col-lg-2">
-<div class="search__option">
-<span class="icon_search search-switch"></span>
-</div>
-</div>
+
 </div>
 </div>
 <div class="canvas__open"><i class="fa fa-bars"></i></div>
@@ -453,10 +449,9 @@ be a result</p>
 <div class="col-lg-4 col-md-6">
 <div class="footer__about">
 <div class="footer__logo">
-<a href="#"><img data-cfsrc="img/footer-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/footer-logo.png" alt=""></noscript></a>
+<a href="#"><img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
 </div>
-<p>Consectetur adipiscing elit, sed do eiusmod tempor labore et dolore magna aliqua. Quis ipsum
-suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+<p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client requirements, especially in geriatric wheelchair transport, we provide a complete range of transportation solutions for the elderly, disabled individuals, and those facing medical obstacles.
 </p>
 <div class="footer__social">
 <a href="#"><span class="social_facebook"></span></a>
@@ -490,11 +485,12 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 </div>
 <div class="col-lg-3 col-md-6">
 <div class="footer__widget">
-<h5>Contacts</h5>
+  <h5>BirghtStar Non-Medical Transportation</h5>
 <ul class="address">
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
-<li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c1a8afa7aeefa2aeadaeada8a381a6aca0a8adefa2aeac">[email&#160;protected]</a></li>
+<li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstartransportt@gmail.com</a></li>
+<!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
 </ul>
 </div>
 </div>
