--- a/Feedback.html
+++ b/Feedback.html
@@ -407,8 +407,7 @@ strict attention.</p>
 <div class="footer__logo">
 <a href="/index.html"><img src="img/logo.png" alt="" style="height: 150px;"></a>
 </div>
-<p>Consectetur adipiscing elit, sed do eiusmod tempor labore et dolore magna aliqua. Quis ipsum
-suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+<p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client requirements, especially in geriatric wheelchair transport, we provide a complete range of transportation solutions for the elderly, disabled individuals, and those facing medical obstacles.
 </p>
 <div class="footer__social">
 <a href="#"><span class="social_facebook"></span></a>
@@ -443,13 +442,12 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>Bright Star Non-Medical Transportation</h5>
+  <h5>BirghtStar Non-Medical Transportation</h5>
 <ul class="address">
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
-<li><span class="icon_phone"></span>  +1 540-380-0024</li>
-<li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">[email&#160;protected]</a></li>
-<li><p style="color: gainsboro;">DMV Certificate #601</p></li>
-</ul>
+<li><span class="icon_phone"></span> +1 540-380-0024</li>
+<li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstartransportt@gmail.com</a></li>
+<!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>--></ul>
 </div>
 </div>
 </div>
