--- a/discount.html
+++ b/discount.html
@@ -238,7 +238,7 @@
 
 <div class="container-fluid">
   <h2 style="color: orangered;text-align: center;">LIMITED TIME OFFER: PROMOTION DISCOUNTS!</h2>
-  <h4 style="text-align: center;">Call Now to Avail the Exclusive Offer: <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span></h4>
+  <h4 style="text-align: center;">Call Now to Avail the Exclusive Offer: <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">540-380-0024</a></span></h4>
 </div>
 <script>
   function dialPhoneNumber(phoneNumber) {
@@ -254,7 +254,7 @@
 <div class="container-box" style="border: 1px solid orangered;padding: 2%;">
   <div class="information">
     
-    <p>Give a call to VA Transportation Healthcare Services for safe and convenient medical/non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">571-450-1300</a></span> now or book in advance.</p>
+    <p>Give a call to BrightStar Non-Medical Transportation Services for safe and convenient non-medical transportation needs. Call <span style="color: red;"><a href="#" onclick="dialPhoneNumber('5714501300')" style="color: red;">540-380-0024</a></span> now or book in advance.</p>
   </div>
   <a href="/contact.html" class="primary-btn"><span>Contact Us</span></a>
 </div>
@@ -269,8 +269,7 @@
 <div class="footer__logo">
 <a href="index.html"><img src="img/new-logo.png" alt=""></a>
 </div>
-<p>Consectetur adipiscing elit, sed do eiusmod tempor labore et dolore magna aliqua. Quis ipsum
-suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+<p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client requirements, especially in geriatric wheelchair transport, we provide a complete range of transportation solutions for the elderly, disabled individuals, and those facing medical obstacles.
 </p>
 <div class="footer__social">
 <a href="#"><span class="social_facebook"></span></a>
@@ -304,11 +303,12 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 </div>
 <div class="col-lg-3 col-md-6 col-sm-6">
 <div class="footer__widget">
-<h5>Contacts</h5>
+  <h5>BirghtStar Non-Medical Transportation</h5>
 <ul class="address">
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
-<li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">[email&#160;protected]</a></li>
+<li><span class="icon_mail"></span> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="71181f171e5f121e1d1e1d181331161c10181d5f121e1c">brightstartransportt@gmail.com</a></li>
+<!--<li><p style="color: gainsboro;">DMV Certificate #601</p></li>-->
 </ul>
 </div>
 </div>
