--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
     <div class="row">
     <div class="col-lg-2">
     <div class="header__logo">
-    <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 90px;"></a>
+    <a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 80px;"></a>
     </div>
     </div>
     <div class="col-lg-10" style="padding-left: 100px;">
