--- a/career.html
+++ b/career.html
@@ -242,7 +242,7 @@
             <div class="row">
           <div class="col-lg-6">
               <h2>ARE YOU EXPERIENCED IN DRIVING, CUSTOMER SERVICE OR PATIENT CARE? JOIN THE SUCCESS TEAM AT VA TRANSPORTATION HEALTHCARE LLC</h2>
-              <p>This position focuses on non-emergency medical transportation, but we welcome candidates with experience in customer service, home health-care, and providing high-quality patient or other care. VA Transportation Healthcare proudly serves our communities with ADA (Americans with Disabilities Act) transportation. Come join the largest private sector operator of public transportation in North America – one that cares about its employees, passengers and their communities.</p>
+              <p>This role centers around non-emergency medical transportation, and we encourage applicants with backgrounds in customer service, home health-care, and delivering exceptional patient or similar care. VA Transportation Healthcare is dedicated to serving our communities through ADA (Americans with Disabilities Act) transportation. Join our team, the leading private-sector provider of public transportation in North America, demonstrating genuine concern for our employees, passengers, and the communities we serve.</p>
               <h4>WHY DRIVE WITH US?</h4>
               <ul>
                 <li>Top paid</li>
@@ -254,24 +254,24 @@
               </ul><br>
               <h4 style="color: orangered;">Apply today for immediate consideration!</h4><br>
               <h3>RESPONSIBILITIES:</h3>
-              <p>The ability to transport passengers throughout the Maryland, Virginia, Washington D.C. areas in a safe and courteous manner
-                Greet passengers, ensure fare payment and maintain a safe environment. shifts assigned based on business need: Either 6 AM or 5 PM weekdays, and some weekends. Each employee will be required to work requested shifts, which includes weekdays, evenings, and weekend shifts.</p>
+              <p>Proficiency in safely and courteously transporting passengers across the regions of Maryland, Virginia, and Washington D.C. <br>
+                Welcoming passengers with greetings, overseeing fare payments, and upholding a secure atmosphere. Shifts will be scheduled according to operational requirements, either at 6 AM or 5 PM on weekdays, with occasional weekends. All employees must be available for the designated shifts, encompassing weekdays, evenings, and weekends.</p>
                 <h3>QUALIFICATIONS:</h3>
                 <ul>
-                  <li>Must be at least 21 years old or older with a high school diploma, GED or equivalent</li>
-                  <li>Must have a clean driving record in one of this MD, DC, or VA</li>
-                  <li>Must be able to provide a 5-year certified driving record – this can be obtained by your local Motor Vehicle Authority, or your driving record can be printed at our facility for a small fee</li>
-                  <li>Must possess excellent customer service and communication skills</li>
-                  <li>Must be punctual with an emphasis on your attendance</li>
-                  <li>Must submit to drug testing, an extensive criminal background check</li>
-                  <li>Must be able to work in all types of weather</li>
-                  <li>Must be able to complete driver training/pass certification</li>
+                  <li>Applicants must be aged 21 or above and possess a high school diploma, GED, or an equivalent qualification.</li>
+                  <li>A clean driving history in either MD, DC, or VA is required.</li>
+                  <li>You should be capable of furnishing a certified driving record spanning five years. This document can be acquired through your local Motor Vehicle Authority or obtained on-site at our facility for a nominal fee.</li>
+                  <li>Demonstration of outstanding customer service and communication abilities is essential.</li>
+                  <li>Punctuality is of paramount importance, with a strong emphasis on consistent attendance.</li>
+                  <li>Mandatory compliance includes undergoing drug testing and an in-depth criminal background check.</li>
+                  <li>Capability to work in varying weather conditions is required.</li>
+                  <li>Successful completion of driver training and obtaining certification is necessary.</li>
                   <li>Physical Requirements Include Ability to:
                     <ul>
-                      <li>Sit for extended periods of time</li>
-                      <li>Lift, push, pull, and carry tools, objects, or equipment above shoulder level without assistance</li>
+                      <li>Be capable of remaining seated for extended durations.</li>
+                      <li>Lift, push, pull, and carry tools, objects, or equipment above shoulder level unaided.</li>
                       <li>Move up and down stairs easily</li>
-                      <li>Reach overhead and below the knees, including bending, twisting, pulling, and stooping</li>
+                      <li>Perform tasks involving overhead reaching and kneeling, including bending, twisting, pulling, and stooping.</li>
                     </ul>
                   </li>
 
@@ -346,7 +346,7 @@
 <div class="footer__logo">
 <a href="index.html"><img src="img/new-logo.png" alt=""></a>
 </div>
-<p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client requirements, especially in geriatric wheelchair transport, we provide a complete range of transportation solutions for the elderly, disabled individuals, and those facing medical obstacles.
+<p>Our team offers accessible vehicles that cater to a diverse clientele, including private individuals, medical institutions, insurance companies, nursing homes, and assisted living facilities. With a deep comprehension of client needs, particularly in geriatric wheelchair transportation, we deliver a full spectrum of transit options for seniors, individuals with disabilities, and those dealing with medical challenges.
 </p>
 <div class="footer__social">
 <a href="#"><span class="social_facebook"></span></a>
