--- a/fleet.html
+++ b/fleet.html
@@ -138,9 +138,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
-<div class="offcanvas__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
+
 <div class="offcanvas__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
@@ -159,10 +157,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <li><span class="icon_phone"></span> +1 540-380-0024</li>
 <li><span class="icon_pin"></span> 5312 Peter's Creek Road Suite B, Roanoke, VA, 24019</li>
 </ul>
-<div class="header__top__right">
-<div class="header__top__right__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
+
 <div class="header__top__right__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
@@ -179,7 +174,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 <div class="row">
 <div class="col-lg-2">
 <div class="header__logo">
-<a href="./index.html"><img data-cfsrc="img/logo.png" alt="" style="height: 50px;"></a>
+<a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 90px;"></a>
 </div>
 </div>
 <div class="col-lg-10" style="padding-left: 100px;">
@@ -276,7 +271,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
 </div>
 <div class="col-lg-5 offset-lg-2">
 <div class="about__company__title">
-<p>Started in 2022 as a family owned business, we provide professional, door-to-door non-emergency wheelchair transport which is available to the public throughout the tri-state area. Our specialized medical transportation responsibilities include but are not limited to: senior citizens, individuals who require the use of wheelchairs and parents and children with special needs. Our nemt services are for private citizens, hospitals, doctors, insurance companies/HMOs, nursing or private group homes, and assisted living facilities. We assist clients from the time of pick-up to drop-off and make sure that they get there safely and on-time.</p>
+<p>Established in 2023 as a family-owned enterprise, we specialize in providing professional, door-to-door non-emergency wheelchair transport services accessible to the general public across the tri-state area. Our dedicated medical transportation responsibilities encompass various categories, including senior citizens, individuals reliant on wheelchairs, and families with special needs. Our NEMT (non-emergency medical transportation) offerings extend to private citizens, hospitals, medical practitioners, insurance providers, nursing or private group homes, as well as assisted living facilities. We offer comprehensive assistance throughout the entire journey, ensuring clients' safety and punctuality from pickup to drop-off.</p>
 </div>
 </div>
 </div>
@@ -286,13 +281,13 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
   <p>Why?</p>
 <h2>Bright Star Non Medical Transportation</h2>
 <div class="about__company__title">
-<p>Our team endeavors to provide the very best nemt transportation service for all of our customer/ partners, including dependability, convenience, safety and value, while exhibiting servant leadership to all.
+<p>Our team is committed to delivering the utmost in NEMT transportation service excellence to both our customers and partners. This commitment encompasses reliability, convenience, safety, and value, all while embracing a philosophy of servant leadership.
 
-VA Transportation Healthcare LLC was founded to bring reliable, quality nemt transportation services to those who are in need of assisted transportation,  VA Transportation Healthcare LLC is dedicated to serving our customers through professional transportation that fills the gap between personal and public transportation.
+The establishment of VA Transportation Healthcare LLC was driven by a dedication to provide trustworthy and high-quality NEMT transportation services for individuals in need of assisted transportation. Our mission revolves around serving our customers through professional transportation services that bridge the gap between personal and public conveyance.
 
-VA Transportation Healthcare LLC will provide the most dependable wheelchair transportation of the highest quality and value with direct focus on meeting the needs of our clients and will respond with promptness, sensitivity and always with the utmost integrity. At  VA Transportation Healthcare LLC, we strive to exceed your expectations.
+At VA Transportation Healthcare LLC, our pledge is to offer the most dependable and top-tier wheelchair transportation services, with a direct emphasis on addressing our clients' requirements. We guarantee a swift, considerate, and consistently integrity-driven response. Our team consistently strives to not only meet but surpass your expectations.
 
-All of our staff display photo ID badges, and in standard company uniforms. Our entire staff is screened and certified comfort and safety is our primary concern.</p>
+All members of our staff are identifiable by photo ID badges and adhere to standard company uniforms. Each team member undergoes screening and certification processes, reflecting our unwavering focus on ensuring comfort and safety at all times.</p>
 </div>
 </div>
 </div>
@@ -300,16 +295,18 @@ All of our staff display photo ID badges, and in standard company uniforms. Our 
   <p>Choose the best</p>
 <h2>Wheel Chair transportation</h2>
 <div class="about__company__title">
-<p>Our highly trained staff members are dedicated to respond with promptness, sensitivity and integrity. We only hire professionally trained drivers who are thoughtful and compassionate and truly empathize and understand the difficulties that arise for persons with limited mobility. Each driver goes through back ground check and has completed extensive training in the handling of patients with special needs to insure safe and proper transfer. Our staff also understands the necessity of maintaining patient confidentiality.  VA Transportation Healthcare LLC is the leading wheelchair transport in Washington DC, Virginia & Maryland, call us for more details or to schedule an appointment.</p></div>
+<p>Our extensively trained team is committed to providing prompt, sensitive, and integrity-driven responses. We exclusively recruit professionally trained drivers who exemplify thoughtfulness and compassion. They genuinely empathize with and comprehend the challenges faced by individuals with limited mobility. Each driver undergoes a thorough background check and completes extensive training in handling patients with special needs, ensuring secure and appropriate transfers. Our staff also recognizes the paramount importance of upholding patient confidentiality.
+
+VA Transportation Healthcare LLC stands as the premier wheelchair transport service in Washington DC, Virginia, and Maryland. Reach out to us for further information or to arrange an appointment.</p></div>
 </div>
 </div>
 <div class="container">
   <h2>Our Refund Policy</h2><br>
   <ul>
     <li>
-      For wheelchair and ambulatory transportation services, customer must cancel 72 hours prior to service date for full refund
+      To avail wheelchair and ambulatory transportation services, customers are required to cancel at least 72 hours before the scheduled service date to receive a complete refund.
     </li>
-    <li>For stretcher transportation services, customer must cancel 72 hours prior to service date to claim 50% refund.</li></ul>
+    <li>Regarding stretcher transportation services, customers must initiate cancellations at least 72 hours prior to the scheduled service date in order to qualify for a 50% refund.</li></ul>
   </div>
 <!--<div class="about__company__pic">
 <div class="row">
@@ -394,7 +391,7 @@ ut labore et dolore magna aliqua.</p>
 </div>
 <div class="chooseus__item__text">
 <h5>Warehouse Storage</h5>
-<p>Order tendering is an initial stage of the transportation process.</p>
+<p>Order tendering marks the initial phase of the transportation process.</p>
 </div>
 </div>
 </div>
@@ -405,7 +402,7 @@ ut labore et dolore magna aliqua.</p>
 </div>
 <div class="chooseus__item__text">
 <h5>Security Cargo</h5>
-<p>While your freight is in transit, a 3PL tracks and manages it.</p>
+<p>During the transit of your freight, a third-party logistics provider (3PL) monitors and oversees its progress.</p>
 </div>
 </div> 
 </div>
@@ -416,7 +413,7 @@ ut labore et dolore magna aliqua.</p>
 </div>
 <div class="chooseus__item__text">
 <h5>Easy Payment</h5>
-<p>After tendering the load, freight brokers will place your.</p>
+<p>Subsequent to tendering the load, freight brokers will arrange for its placement.</p>
 </div>
 </div>
 </div>
@@ -427,7 +424,7 @@ ut labore et dolore magna aliqua.</p>
 </div>
 <div class="chooseus__item__text">
 <h5>Fast Delivery</h5>
-<p>Carrier agrees to spot or drop trailers or vehicles at.</p>
+<p>The carrier commits to positioning or depositing trailers or vehicles at...</p>
 </div>
 </div>
 </div>
