--- a/testimonials.html
+++ b/testimonials.html
@@ -171,7 +171,7 @@
 <div class="row">
 <div class="col-lg-2">
 <div class="header__logo">
-<a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 80px;"></a>
+<a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 90px;"></a>
 </div>
 </div>
 <div class="col-lg-10" style="padding-left: 100px;">
@@ -478,35 +478,6 @@ be a result</p>
 </div>
 </section>-->
 
-<div class="container">
-<div class="counter__content" style="text-align: center;">
-<div class="row">
-<div class="col" style="background-color: #f5b070;">
-<div class="counter__item">
-<!--<img src="img/about/ci-1.png" alt="">-->
-<div class="counter__item__num">
-<h2 class="c_num">24</h2>
-<h2>/7</h2>
-</div>
-<h5>Ready for service</h5>
-<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-ut labore et dolore magna aliqua.</p>-->
-</div>
-</div>
-<div class="col" style="background-color: #f4c982;">
-<div class="counter__item">
-<!--<img src="img/about/ci-2.png" alt="">-->
-<div class="counter__item__num">
-<h2 class="c_num">100</h2>
-<h2>%</h2>
-</div>
-<h5>Satisfaction guaranteed</h5>
-<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
- ut labore et dolore magna aliqua.</p>-->
-</div>
-</div>
-</div>
-</div>
 
 <!--<section>
     <div class="container">
@@ -532,7 +503,7 @@ ut labore et dolore magna aliqua.</p>-->
     </div>
 </section>-->
 
-<section class="latest spad">
+<!--<section class="latest spad">
     <div class="container">
 <div class="row">
 <div class="col-lg-12">
@@ -542,7 +513,7 @@ ut labore et dolore magna aliqua.</p>-->
 </div>
 </div>
 </div>
-</section>
+</section>-->
 
 <!-- Box -->
 <div class="container-fluid" style="align-items: center;text-align: center;padding-left: 3%;padding-right: 3%;">
